feat(launcher): add platform-native distributions (#30)
* feat(launcher): add platform-specific Zig distributions

- Add a minimal Zig launcher module that delegates to the packaged Java CLI.
- Build Windows x86_64, Linux x86_64, and Linux AArch64 launchers from Gradle.
- Package one root-level launcher per platform zip while preserving the jar/lib layout.
- Document the distribution contract and ignore Zig cache output.

* fix(launcher): resolve gdcc jar at runtime

- Scan launcher directory for a single gdcc-*.*.*.jar instead of using a build-time jar name.
- Add required JVM native access and gdparser resource directory options.
- Extract jar search into a dedicated Zig module and exclude Zig caches from Gradle inputs.
- Document the launcher jar resolution contract.

* feat(launcher): localize runtime errors

- Resolve Java 25+ and Zig before launching and fail fast when either is unavailable.
- Add English and Chinese launcher error text with environment and Windows locale detection.
- Use Windows UTF-16 console output to avoid mojibake on non-UTF-8 code pages.
- Document launcher toolchain discovery and localized error behavior.

* feat(launcher): apply pending update jar before startup

- Promote a unique gdcc-*.*.*-update.jar by deleting old launcher jars and renaming it before Java startup.
- Keep ambiguous multiple ordinary or update jars on the existing multiple-jar error path.
- Document the launcher update jar contract and use the native gdparser resource directory.

* fix(launcher): search common Windows Java installs

- Discover Java under Program Files vendor directories and user .jdks paths on Windows.
- Keep explicit launcher, environment, and PATH Java locations ahead of common path fallbacks.
- Document Windows Java common path coverage and add Zig tests for candidate collection.

* fix(launcher): distinguish duplicate update jars

- Split jar search multiple results for ordinary and update jars.
- Add localized duplicate update jar text for laun