@@ -143,13 +143,37 @@ build/libs/lib/
 
 `jar` task 依赖 `syncRuntimeLibs`，因此直接运行 `jar` 也会刷新同级 `lib` 文件夹。
 
-`packageDistribution` task 生成 zip distribution：
+`buildZigLauncher` task 使用 Zig 构建默认 native launcher 矩阵：
 
 ```text
-build/distributions/gdcc-<version>.zip
+windows-x86_64/gdcc.exe
+linux-x86_64/gdcc
+linux-aarch64/gdcc
 ```
 
-zip 顶层包含主 jar 与 `lib/` 文件夹。该 distribution 面向 classpath-style `java -jar gdcc-<version>.jar` 启动；module-path 启动不依赖 manifest `Class-Path`，不属于当前分发合同。
+`packageDistribution` task 是聚合任务，生成三个平台 zip distribution：
+
+```text
+build/distributions/gdcc-<version>-windows-x86_64.zip
+build/distributions/gdcc-<version>-linux-x86_64.zip
+build/distributions/gdcc-<version>-linux-aarch64.zip
+```
+
+每个 zip 顶层只包含对应平台的 launcher、主 jar 与 `lib/` 文件夹，不包含其他平台 launcher。launcher 与主 jar 同级，最终仍通过 classpath-style `java -jar gdcc-<version>.jar` 启动；module-path 启动不依赖 manifest `Class-Path`，不属于当前分发合同。
+
+launcher 启动时从自身可执行文件同级目录扫描 `gdcc-*.*.*.jar`，不依赖构建时固定 jar 文件名。在选择普通 jar 前，
+launcher 会先扫描 `gdcc-*.*.*-update.jar`；若恰好存在一个 update jar，则删除同目录下所有普通 `gdcc-*.*.*.jar`，
+再把该 update jar 重命名为去掉 `-update` 的普通 jar 名称，并启动重命名后的 jar。若存在多个 update jar，或没有 update jar
+但匹配到多个普通 jar，launcher 以错误退出并要求用户删除多余文件。launcher 传给 JVM 的固定参数包含：
+
+```text
+--enable-native-access=ALL-UNNAMED
+-Dgdparser.gdscript.resourceDir=<launcher-dir>
+```
+
+launcher 使用自身可执行文件同级目录作为本地工具链优先搜索根，不使用用户当前工作目录作为本地搜索根。启动 Java 前会优先检查同级的 `java`、`java/bin/java`、`jre/bin/java`、`jdk/bin/java`，随后才检查 Java 环境变量、`PATH` 与常见系统位置，并且只接受 `java --version` 报告为 25 或更高版本的运行时。launcher 还会优先检查同级的 `zig`、`zig/zig`、`zig/bin/zig`；若找到 Zig 可执行文件，会在传给 JVM 的环境中设置 `ZIG_HOME=<zig-executable-dir>`，使 Java 侧 `ZigUtil` 可以优先复用分发包旁边的 Zig。若找不到 Java 25+ 或 Zig，launcher 都会以错误退出。launcher 错误文本支持英文与中文，会根据 `LC_ALL`、`LC_MESSAGES`、`LANG`、`LANGUAGE` 中的首个受支持语言环境选择翻译；Windows 在环境变量未命中时会使用系统 UI 语言偏好，再回退到用户 locale。不支持的语言环境回退英文。Windows 控制台错误输出使用 UTF-16 console API，避免非 UTF-8 代码页下中文错误文本乱码；重定向输出仍保留 UTF-8 字节。
+
+Windows Java 常见系统位置包括 `%ProgramW6432%`、`%ProgramFiles%`、`%ProgramFiles(x86)%` 下的常见 JDK vendor 目录，以及 `%USERPROFILE%/.jdks` 和 `%LOCALAPPDATA%/Programs/Java` 下的一层 JDK 目录。
 
 ---
 
